sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:9: error: '<-' expected but ')' found.
    for(i to nbValue-1-i) {
                        ^AlgBubbleSort2:16: error: illegal start of simple expression
  }
  ^